--- a/aep.html
+++ b/aep.html
@@ -59,7 +59,7 @@
                 <h1 class="title">Hey</h1>
                 <h1 class="title orange">I'm Anosh</h1>
                 <p class="header--para">
-                I'm a <b class="orange">Software Engineer</b> with a strong passion for experiences.
+                I'm a <b class="orange">Frontend Developer</b> with a strong passion for experiences.
                 <br>
                 Here's a bit more <b class="orange click" onclick="toggleModel()">About me</b>.
             </p>
