--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="language__list">
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/html logo.png" alt="" class="language__img">
+                            <img src="html logo.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">HTML</span>
                     </div>
@@ -291,7 +291,7 @@
                  target="_blank">Resume</a>
 
             </div>
-            <div class="footer__copyright">Copyright © 2022 Anosh Matti</div>
+            <div class="footer__copyright">Copyright © 2023 Anosh Matti</div>
         </div>
     </footer>
 </body>
