--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class=" about-me__info row">
                 <div class="about-me__info--container">
                     <figure class="about-me__picture--mask">
-                        <img src="./assets/bostonstairs.jpg" class="about-me__picture" alt="Profile Picture">
+                        <img src="./bostonstairs.jpg" class="about-me__picture" alt="Profile Picture">
                     </figure>
                     <h1 class="about-me__info--title">
                         Hi There! I'm <span class="text--purple">Anosh Matti</span> 
