--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <figure class="about.me__img--container">
-                    <img src="./assets/undraw_trendy_interface_re_xsou.svg" class="about-me__img" alt="">
+                    <img src="./undraw_trendy_interface_re_xsou.svg" class="about-me__img" alt="">
                 </figure>
             </div>
         </div>
@@ -188,7 +188,7 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/Weather App Final.png" class="project__img" alt="Personal Budget Project">
+                            <img src="./Weather App Final.png" class="project__img" alt="Personal Budget Project">
                             <div class="project__description">
                                 <h3 class="project__description--title">Weather App</h3>
                                 <h4 class="project__description--sub-title">
@@ -219,7 +219,7 @@
             <ul class="experience__list">
                 <li class="project">
                     <div class="project__wrapper">
-                        <img src="./assets/ONC-Experience.png" class="project__img" alt="Personal Budget Project">
+                        <img src="./ONC-Experience.png" class="project__img" alt="Personal Budget Project">
                         <div class="project__description">
                             <h3 class="project__description--title">Frontend Developer</h3>
                             <h4 class="project__description--sub-title">
@@ -233,7 +233,7 @@
                 </li>
                 <li class="project">
                     <div class="project__wrapper">
-                        <img src="./assets/Upwork-Experience.png" class="project__img" alt="Personal Budget Project">
+                        <img src="./Upwork-Experience.png" class="project__img" alt="Personal Budget Project">
                         <div class="project__description">
                             <h3 class="project__description--title">Upwork</h3>
                             <h4 class="project__description--sub-title">
@@ -284,7 +284,7 @@
                 link__hover-effect
                 link__hover-effect--white
                 " target="_blank">Email</a>
-                <a href="./assets/Anosh Matti - June 2022.pdf" class="
+                <a href="./Anosh Matti - June 2022.pdf" class="
                 footer__social--link
                 link__hover-effect
                 link__hover-effect--white"
