--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a href="mailto:anoshmatti1@gmail.com" class="about-me__link" target="_blank">
                             <i class="far fa-envelope"></i>
                         </a>
-                        <a href="./assets/Anosh Matti - June 2022.pdf" class="about-me__link" target="_blank">
+                        <a href="./Anosh Matti - June 2022.pdf" class="about-me__link" target="_blank">
                             <i class="fas fa-file-pdf"></i>
                         </a>
                     </div>
@@ -97,61 +97,61 @@
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/Javascript-removebg-preview.png" alt="" class="language__img">
+                            <img src="./Javascript-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Javascript</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/C++-removebg-preview.png" alt="" class="language__img">
+                            <img src="./C++-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">C++</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/sql-removebg-preview.png" alt="" class="language__img">
+                            <img src="./sql-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">SQL</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/react-removebg-preview.png" alt="" class="language__img">
+                            <img src="./react-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">React</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/ux_design-removebg-preview.png" alt="" class="language__img">
+                            <img src="./ux_design-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">UX Design</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/photoshop-removebg-preview.png" alt="" class="language__img">
+                            <img src="./photoshop-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Photoshop CS6</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/typescript.png" alt="" class="language__img">
+                            <img src="./typescript.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">TypeScript</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/okay final angular.png" alt="" class="language__img">
+                            <img src="./okay final angular.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Angular</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/okay final node.png" alt="" class="language__img">
+                            <img src="./okay final node.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Node</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/okay final solidity.png" alt="" class="language__img">
+                            <img src="./okay final solidity.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Solidity</span>
                     </div>
@@ -169,7 +169,7 @@
                 <ul class="project__list">
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/Srosh Matti .png" class="project__img" alt="Personal Budget Project">
+                            <img src="./Srosh Matti .png" class="project__img" alt="Personal Budget Project">
                             <div class="project__description">
                                 <h3 class="project__description--title">E-Portfolio</h3>
                                 <h4 class="project__description--sub-title">
