--- a/index.html
+++ b/index.html
@@ -97,61 +97,61 @@
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./Javascript-removebg-preview.png" alt="" class="language__img">
+                            <img src="Javascript-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Javascript</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./C++-removebg-preview.png" alt="" class="language__img">
+                            <img src="C++-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">C++</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./sql-removebg-preview.png" alt="" class="language__img">
+                            <img src="sql-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">SQL</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./react-removebg-preview.png" alt="" class="language__img">
+                            <img src="react-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">React</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./ux_design-removebg-preview.png" alt="" class="language__img">
+                            <img src="ux_design-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">UX Design</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./photoshop-removebg-preview.png" alt="" class="language__img">
+                            <img src="photoshop-removebg-preview.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Photoshop CS6</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./typescript.png" alt="" class="language__img">
+                            <img src="typescript.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">TypeScript</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./okay final angular.png" alt="" class="language__img">
+                            <img src="okay final angular.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Angular</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./okay final node.png" alt="" class="language__img">
+                            <img src="okay final node.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Node</span>
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./okay final solidity.png" alt="" class="language__img">
+                            <img src="okay final solidity.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">Solidity</span>
                     </div>
